--- a/Facts.html
+++ b/Facts.html
@@ -85,7 +85,7 @@
 
 <center><p1>About Me</p1></center>
   <br>
-    <p2>Hi! I'm Michelle, and I coded this website using HTML and JavaScript during the Girls Who Code Summer Self-Paced Program.</p2>
+    <p2>Hi! I'm Michelle, and I coded this website using HTML and JavaScript</p2>
   <br>
   
 </div>
